# dispstepper

./: .gitignore  .gitmodules  readme.md
.github/workflows/: build.yml  cmake.yml  release.yml
firmware/: CMakeLists.txt
firmware/cmake/: binutils-arm-none-eabi.cmake  clang-arm-none-eabi.cmake  gcc-arm-none-eabi.cmake  gdb-helper.cmake  launch.json.in  openocd-run.gdb.in  samd21.cmake  toolchain-arm-none-eabi.cmake
firmware/include/: board.h  button.h  cmdparse.h  conf_board.h  config.h  control.h  inplace_function.h  iserial.h  leds.h  mode.h  simpleparser.h  stepper.h  usb_cdc.h  usb_cdc_wrap.h  version.h.in
firmware/libs/: CMakeLists.txt  dispstepper.atstart
firmware/libs/atmel/: AtmelStart.gpdsc  atmel_start.h  atmel_start_config.atstart  atmel_start_pins.h  driver_init.c  driver_init.h
firmware/libs/atmel/config/: hpl_gclk_config.h  hpl_sercom_config.h  hpl_sysctrl_config.h  hpl_tc_config.h  peripheral_clk_config.h
firmware/libs/atmel/examples/: driver_examples.c  driver_examples.h
firmware/libs/atmel/hpl/tc/: tc_lite.c
firmware/libs/atmel/persistent_storage/: nv_storage_config.h
firmware/libs/atmel/samd21d/gcc/gcc/: samd21e17d_flash.ld
firmware/scripts/: test_serial.py  udev.rules
firmware/src/: CMakeLists.txt  board.c  board.cpp  board.h  cmdparse.cpp  config.cpp  control.cpp  main.cpp  mode.h  stepper.cpp  usb_cdc.c  usb_cdc.cpp
hardware/reva/: fp-info-cache  fp-lib-table  reva-cache.lib  reva.kicad_pcb  reva.kicad_prl  reva.kicad_pro  reva.pro  reva.sch  sym-lib-table
hardware/reva/gerber/: reva-B_Cu.gbl  reva-B_Cu.gbr  reva-B_Mask.gbr  reva-B_Mask.gbs  reva-B_Paste.gbp  reva-B_Paste.gbr  reva-B_SilkS.gbo  reva-B_SilkS.gbr  reva-Edge_Cuts.gbr  reva-Edge_Cuts.gm1  reva-F_Cu.gbr  reva-F_Cu.gtl  reva-F_Mask.gbr  reva-F_Mask.gts  reva-F_Paste.gbr  reva-F_Paste.gtp  reva-F_SilkS.gbr  reva-F_SilkS.gto  reva-NPTH-drl_map.ps  reva-NPTH.drl  reva-PTH-drl_map.ps  reva-PTH.drl  reva-drl.rpt  reva-job.gbrjob
hardware/reva/pdf/: reva-F_Fab.ps
stepper/: Makefile  stepper.ioc
stepper/Core/Inc/: config.h  main.h  stepper.h  stm32f4xx_hal_conf.h
stepper/Core/Src/: main.c  stepper.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
stepper/USB_DEVICE/App/: usbd_cdc_if.c  usbd_cdc_if.h
